@@ -44,6 +44,8 @@ namespace GREATClient
 
 		NetClient client;
 
+		public EventHandler<NewPlayerEventArgs> OnNewPlayer;
+
 		public Client()
 		{
 			NetPeerConfiguration config = new NetPeerConfiguration("GREAT");
@@ -66,7 +68,7 @@ namespace GREATClient
 			client.UPnP.ForwardPort(client.Port, "GREAT Client");
 			client.DiscoverLocalPeers(14242);
 			// If the discover cluster-fucks on localhost, use that line instead
-			client.Connect("127.0.0.1", 14242);
+			//client.Connect("127.0.0.1", 14242);
 		}
 
 		public void Stop()
@@ -96,6 +98,7 @@ namespace GREATClient
 						Console.WriteLine(msg.ReadString());
 						break;
 					case NetIncomingMessageType.Data:
+						OnDataReceived(msg);
 						break;
 					default:
 						Console.WriteLine("Unhandled type: " + msg.MessageType);
@@ -105,12 +108,44 @@ namespace GREATClient
 			}
 		}
 
+		void OnDataReceived(NetIncomingMessage msg)
+		{
+			byte code = msg.ReadByte();
+			ServerCommand command = (ServerCommand)code;
+
+			Console.WriteLine("Received " + command);
+
+			switch (command) {
+				case ServerCommand.NewPlayer:
+					OnNewPlayer(this, new NewPlayerEventArgs(msg));
+					break;
+
+				default:
+					throw new NotImplementedException();
+			}
+		}
+
 		public void SendCommand(ClientCommand command)
 		{
+			Console.WriteLine("Sending " + command);
 			NetOutgoingMessage msg = client.CreateMessage();
 			msg.Write((byte)command);
 
 			client.SendMessage(msg, NetDeliveryMethod.ReliableOrdered);
+		}
+	}
+
+
+	public class NewPlayerEventArgs : EventArgs
+	{
+		public int ID { get; private set; }
+		public bool IsOurID { get; private set; }
+		public Vec2 Position { get; private set; }
+		public NewPlayerEventArgs(NetIncomingMessage msg)
+		{
+			ID = msg.ReadInt32();
+			IsOurID = msg.ReadBoolean();
+			Position = new Vec2(msg.ReadFloat(), msg.ReadFloat());
 		}
 	}
 }
